# OpenGL_RT

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/glad/: glad.h
include/rtEngine/: bvh.hpp  camera.hpp  component.hpp  engine.hpp  gameobject.hpp  input.hpp  mesh.hpp  model.hpp  renderer.hpp  scene.hpp  shader.hpp  texture.hpp  time.hpp  types.hpp
models/Survival_BackPack_2/: Survival_BackPack_2.mtl
models/container/: untitled.mtl
models/ground/: TestPlane.mtl  grass.mtl  ground.mtl
models/lightcube/: lightcube.mtl
models/shrek/: shrek.mtl  shrek_scaled.mtl
shaders/: basicUnlit.frag  basicUnlit.vert  quad.frag  quad.vert  raytrace.comp
src/: glad.c  main.cpp
src/rtEngine/: bvh.cpp  engine.cpp  gameobject.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  texture.cpp
